# ai-saas-starter

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/src/saas_starter/: main.py
backend/src/saas_starter/ai/: __init__.py  base.py  router.py
backend/src/saas_starter/api/: deps.py
backend/src/saas_starter/api/v1/: admin.py  (+6 more)
backend/src/saas_starter/core/: __init__.py  config.py  database.py  exceptions.py  security.py
backend/src/saas_starter/models/: __init__.py  ai_usage.py  audit_log.py  base.py  subscription.py  tenant.py  user.py
backend/src/saas_starter/schemas/: ai.py  auth.py  billing.py  gdpr.py  user.py
docs/: api.md  architecture.md  code-conventions.md  testing-strategy.md
docs/decisions/: ADR-001-fastapi-react.md  ADR-002-llm-abstraction.md  ADR-003-multi-tenancy.md  ADR-004-ai-usage-tracking.md  ADR-005-stripe-billing.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AuthGuard.tsx  Navbar.tsx
frontend/lib/: api.ts
tests/: conftest.py
tests/integration/: test_ai_api.py  test_auth_api.py  test_billing_api.py  test_full_saas_flow.py  test_gdpr_api.py
tests/unit/: test_auth.py  test_gdpr_service.py  test_llm_router.py  test_models.py  test_security.py  test_stripe_service.py
(+11 files in other folders)
